[gd_scene load_steps=10 format=2]

[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://MainMenu/Controls.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/monogram_extended.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/ButtonFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/monogram_extended.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Controls" parent="." instance=ExtResource( 2 )]

[node name="NetworkPanel" type="Panel" parent="."]
margin_right = 640.0
margin_bottom = 368.0
__meta__ = {
"_edit_lock_": true
}

[node name="IPLabel" type="Label" parent="NetworkPanel"]
margin_left = 352.0
margin_top = 28.0
margin_right = 472.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Host's IP:"
align = 2
valign = 1

[node name="ServerIP" type="LineEdit" parent="NetworkPanel"]
margin_left = 352.0
margin_top = 60.0
margin_right = 576.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 202.058, 8.67853 )
custom_fonts/font = SubResource( 3 )
text = "127.0.0.1"
placeholder_text = "IP Address"
caret_blink = true
caret_blink_speed = 0.35

[node name="NameLabel" type="Label" parent="NetworkPanel"]
margin_left = 64.0
margin_top = 28.0
margin_right = 220.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Display Name:"
align = 2
valign = 1

[node name="PlayerName" type="LineEdit" parent="NetworkPanel"]
margin_left = 64.0
margin_top = 60.0
margin_right = 288.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 202.058, 8.67853 )
custom_fonts/font = SubResource( 3 )
max_length = 12
placeholder_text = "Enter name"
caret_blink = true
caret_blink_speed = 0.35

[node name="HelpButton" type="Button" parent="NetworkPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 272.0
margin_top = -124.0
margin_right = 304.0
margin_bottom = -88.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0, 0.913725, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.913725, 1, 1 )
text = "?"

[node name="JoinButton" type="Button" parent="NetworkPanel"]
margin_left = 328.0
margin_top = 121.5
margin_right = 440.0
margin_bottom = 163.5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.270588, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 1, 0, 1 )
text = "Join"

[node name="HostButton" type="Button" parent="NetworkPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -62.5
margin_right = -8.0
margin_bottom = -20.5
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0.270588, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 1, 0, 1 )
text = "Host"

[node name="ExitButton" type="Button" parent="NetworkPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 104.0
margin_right = 64.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Exit"

[node name="ControlsButton" type="Button" parent="NetworkPanel"]
margin_left = 256.0
margin_top = 176.0
margin_right = 384.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0, 0.913725, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.913725, 1, 1 )
text = "Controls"

[node name="SettingsButton" type="Button" parent="NetworkPanel"]
margin_left = 256.0
margin_top = 232.0
margin_right = 384.0
margin_bottom = 274.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0, 0.913725, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.913725, 1, 1 )
text = "Settings"

[node name="JoinFailPopup" type="AcceptDialog" parent="NetworkPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -62.5
margin_right = 151.0
margin_bottom = 62.5
theme = ExtResource( 5 )
popup_exclusive = true
window_title = "Failed to Join"
dialog_text = "Unable to join server, 
please try again later."

[node name="HostFailPopup" type="AcceptDialog" parent="NetworkPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -55.0
margin_right = 242.0
margin_bottom = 70.0
theme = ExtResource( 5 )
popup_exclusive = true
window_title = "Unable to Host"
dialog_text = "Unable to create server, a server 
may already exist on your IP."

[node name="DisconnectedPopup" type="AcceptDialog" parent="NetworkPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.0
margin_top = -48.0
margin_right = 163.0
margin_bottom = 48.0
theme = ExtResource( 5 )
popup_exclusive = true
window_title = "Disconnected!"
dialog_text = "Disconnected from server."

[node name="GameAlreadyStartedPopup" type="AcceptDialog" parent="NetworkPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.0
margin_top = -40.0
margin_right = 157.0
margin_bottom = 40.0
theme = ExtResource( 5 )
window_title = "Unable to Join"
dialog_text = "Host is already in game!"

[node name="HelpDialog" type="AcceptDialog" parent="NetworkPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -135.0
margin_right = 235.0
margin_bottom = 135.0
theme = ExtResource( 5 )
window_title = ""
dialog_text = "To Host a game:
- Simply Press Host, no need to fill 
  in IP Address

To Join a game:
- Ask for the host's IP Address, fill
  it in, and press join"
[connection signal="pressed" from="NetworkPanel/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="NetworkPanel/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="NetworkPanel/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="NetworkPanel/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="NetworkPanel/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="NetworkPanel/SettingsButton" to="." method="_on_SettingsButton_pressed"]
